infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      # Init container to ensure RabbitMQ is ready
      containers:
        - name: auth-depl
          image: nody00/autobuy-auth
          ports:
            - containerPort: 4001
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4001
      targetPort: 4001
