infra/k8s/bids-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bids-depl
spec:
  selector:
    matchLabels:
      app: bids
  template:
    metadata:
      labels:
        app: bids
    spec:
      # Init container to ensure RabbitMQ is ready
      containers:
        - name: bids-depl
          image: nody00/autobuy-bids
          ports:
            - containerPort: 4004
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bids-clusterip-srv
spec:
  selector:
    app: bids
  ports:
    - name: bids
      protocol: TCP
      port: 4004
      targetPort: 4004
