infra/k8s/bids-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bids-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bids-mongo
  template:
    metadata:
      labels:
        app: bids-mongo
    spec:
      containers:
        - name: bids-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: bids-mongo-srv
spec:
  selector:
    app: bids-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
