infra/k8s/listing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-depl
spec:
  selector:
    matchLabels:
      app: listing
  template:
    metadata:
      labels:
        app: listing
    spec:
      # Init container to ensure RabbitMQ is ready
      containers:
        - name: listing-depl
          image: nody00/autobuy-listing
          ports:
            - containerPort: 4002
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: listing-clusterip-srv
spec:
  selector:
    app: listing
  ports:
    - name: listing
      protocol: TCP
      port: 4002
      targetPort: 4002
