infra/k8s/listings-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listings-depl
spec:
  selector:
    matchLabels:
      app: listings
  template:
    metadata:
      labels:
        app: listings
    spec:
      containers:
        - name: listings-depl
          image: nody00/autobuy-listings
          resources:
            limits:
              memory: "2048Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: listings-clusterip-srv
spec:
  selector:
    app: listings
  ports:
    - name: listings
      protocol: TCP
      port: 4002
      targetPort: 4002
