infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
spec:
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      # Init container to ensure RabbitMQ is ready
      containers:
        - name: notification-depl
          image: nody00/autobuy-notification
          ports:
            - containerPort: 4001
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "300Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-clusterip-srv
spec:
  selector:
    app: notification
  ports:
    - name: notification
      protocol: TCP
      port: 4005
      targetPort: 4005
