infra/k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-redis
  template:
    metadata:
      labels:
        app: notification-redis
    spec:
      containers:
        - name: notification-redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: notification-redis-srv
spec:
  selector:
    app: notification-redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
