infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m" # Allow 10MB uploads
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180" # Increase timeouts for larger uploads
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  ingressClassName: nginx
  rules:
    - host: autobuy.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/?(.*)"
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: "/auth/"
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 4001
          - pathType: Prefix
            path: "/listings/"
            backend:
              service:
                name: listing-clusterip-srv
                port:
                  number: 4002
          - pathType: Prefix
            path: "/query/"
            backend:
              service:
                name: query-clusterip-srv
                port:
                  number: 4003
